# ocr.server

./: README.md  pyproject.toml
boards/: admin.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_initial.py  0003_alter_board_file.py  0003_board_image_link.py
config/: settings.py  urls.py
ocr/: urls.py  views.py
static/script/: board-api.js  boards-api.js  csrf.js  login-api.js  logout-api.js  user-api.js
static/style/: board_form.css  board_list.css  form.css  grid.css  reset.css
templates/: board.html  board_form.html  board_list.html  board_update_form.html  footer.html  header.html  index.html  join_form.html  login_form.html  mypage.html  user_update_form.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
